Belajar CSS dan html

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>learn HTML </title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="wraper">
     <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Produck</li>
-        <li>BLok</li>
-        <li>CONTACT</li>
+        <li>Home</li>|
+        <li>About</li>|
+        <li>Produck</li>|
+        <li>BLog</li>|
+        <li>Contact</li>|
     </ul>
     
     <h1> Welcome To My BLog</h1>
@@ -96,7 +98,7 @@
 
     <button>Send</button>
     </form>
-    
+    </div>
     <br><br><br><br>
 </body>
 </html>
